# scrape

./: LICENSE  README.md  scrape.cabal  stack.yaml
app/: Main.hs
src/: Import.hs
src/Scrape/: Eval.hs  Money.hs  ParserUtils.hs
src/Scrape/CssSelector/: Eval.hs  Parser.hs  Types.hs
src/Scrape/JsonExp/: Eval.hs  Js2Json.hs  Parser.hs  Types.hs
src/Scrape/Page/: Eval.hs  Parser.hs  Types.hs
src/Scrape/SelectorExp/: Eval.hs  Parser.hs  Types.hs
test/: Test.hs
test/Scrape/: ParserUtilsSpec.hs
test/Scrape/CssSelector/: EvalSpec.hs  ParserSpec.hs
test/Scrape/JsonExp/: EvalSpec.hs  Js2JsonSpec.hs  ParserSpec.hs
test/Scrape/PageExp/: ParserSpec.hs
test/Scrape/SelectorExp/: ParserSpec.hs
test/data/: bad.scraper  dvd_rewinder.html  dvd_rewinder.scraper  good.scraper  long_title.html  sample.html  sample.scraper  sample2.html  sample2.scraper
