name:                scrape
version:             0.1.0.0
synopsis:            DSL for scraping web pages
description:         DSL for scraping web pages
homepage:            https://github.com/romand/scrape
license:             Apache
license-file:        LICENSE
author:              Roman Dzvinkovsky <romand.ne@gmail.com>
maintainer:          Roman Dzvinkovsky <romand.ne@gmail.com>
copyright:           2016 Roman Dzvinkovsky
category:            Network, Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude, OverloadedStrings
  ghc-options:
    -ferror-spans
    -Werror
    -Wall
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fprof-auto
    -fprof-cafs
    -threaded
    -rtsopts

  build-depends:
    base >= 4.7 && < 5,

    vector,
    unordered-containers,

    classy-prelude,
    MissingH,

    text,

    bytestring,
    bytestring-lexing,

    scientific,
    attoparsec,
    regex-pcre,

    filepath,

    aeson,
    aeson-qq,

    html-conduit,
    xml-conduit,

    language-javascript == 0.5.*

  exposed-modules:
    Scrape.CssSelector.Eval
    Scrape.CssSelector.Parser
    Scrape.CssSelector.Types
    Scrape.Eval
    Scrape.JsonExp.Eval
    Scrape.JsonExp.Js2Json
    Scrape.JsonExp.Parser
    Scrape.JsonExp.Types
    Scrape.Money
    Scrape.ParserUtils
    Scrape.SelectorExp.Eval
    Scrape.SelectorExp.Parser
    Scrape.SelectorExp.Types
    Scrape.Page.Eval
    Scrape.Page.Parser
    Scrape.Page.Types

  other-modules:
    Import

executable scrape
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , text
                     , aeson
                     , scrape

test-suite scrape-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude, OverloadedStrings

  ghc-options:
    -ferror-spans
    -Wall
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fprof-auto
    -fprof-cafs
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base,
    classy-prelude,

    bytestring,
    attoparsec,

    aeson,
    aeson-qq,

    html-conduit,
    xml-conduit,

    hspec,

    scrape

  other-modules:
    Scrape.CssSelector.EvalSpec
    Scrape.CssSelector.ParserSpec
    Scrape.JsonExp.EvalSpec
    Scrape.JsonExp.Js2JsonSpec
    Scrape.JsonExp.ParserSpec
    Scrape.ParserUtilsSpec
    Scrape.SelectorExp.ParserSpec
    Scrape.PageExp.ParserSpec
    Test


source-repository head
  type:     git
  location: https://github.com/romand/scrape
